# PlayWithChatGPT

./: .dockerignore  .gitignore  BUILD  README.md
ChatGPTPromptEngineeringForDevelopersCourse/: Makefile  README.md  main.py  requirements.txt
DjangoAuthExampleWebApp/: Makefile  README.md  requirements.txt
DjangoAuthExampleWebApp/authsite/authsite/: settings.py  urls.py
DjangoAuthExampleWebApp/authsite/catalog/: admin.py  models.py  urls.py  views.py
DjangoAuthExampleWebApp/authsite/templates/: base_generic.html
DjangoLibraryExampleWebApp/: Makefile  README.md
DjangoLibraryExampleWebApp/locallibrary/catalog/: admin.py  models.py  urls.py  views.py
DjangoLibraryExampleWebApp/locallibrary/locallibrary/: settings.py  urls.py
DjangoRestExampleWebApp/: README.md
DjangoRestExampleWebApp/restsite/: Makefile  manage.py  requirements.txt
DjangoRestExampleWebApp/restsite/containers/: README.md  docker-compose.yml
DjangoRestExampleWebApp/restsite/etc/: gunicorn.conf.py  nginx.conf
DjangoRestExampleWebApp/restsite/handlers/: models.py  permissions.py  (+3 more)
DjangoUserExampleWebApp/: Makefile  README.md  requirements.txt
DjangoUserExampleWebApp/usersite/: .dockerignore  Makefile  db.sqlite3  manage.py  requirements.txt
Infra/: Makefile  README.md
Infra/django-simplesite/: docker-compose.yml
Infra/postgres/: docker-compose.yml
SimpleDjangoWebApp/: Makefile  README.md
SimpleDjangoWebApp/simplesite/: Dockerfile
StockSelection/: BUILD.bazel  Makefile  README.md  main.go  main.py
StockSelection/lib/: BUILD.bazel  stock_utils.go
doc/paper/: README.md
(+67 files in other folders)
